# zarathustra

./: .gitignore  .gitmodules  README.md  hardhat.config.ts  package-lock.json  package.json  readme.md
avs-runner/operator/: bridger.ts  index.ts
client/: package-lock.json  package.json
client/constants/: config.ts  contracts.ts  vaultAbi.ts
client/pages/: _app.tsx  index.tsx
client/ui/: CogDrawer.tsx  ConnectButton.tsx  Dropdown.tsx  Form.tsx  SettingsButton.tsx  SubmitButton.tsx  Tokendropdown.tsx  alert.tsx  textbox.tsx
contracts/: .gitignore  Bridge.sol  Makefile  README.md  Vault.sol  getDigestUtil.ts  package.json
contracts/constants/: erc20Abi.ts  vaultAbi.ts
contracts/script/: bridgeTx.ts  exampleDigestSigning.ts  runner.ts
contracts/src/: Counter.sol  SignatureVerifier.sol  Signing.sol  Structs.sol  TestERC20.sol  Vault.sol
contracts/test/: Vault.t.sol
deploy/: 001_deploy_token.ts  002_deploy_vault.ts
eigen-avs/: Makefile  package-lock.json  package.json
eigen-avs/contracts/: README.md  foundry.toml  metadata.json  operator.yaml
eigen-avs/operator/: index.ts
protocol/: hardhat.config.ts  package-lock.json  package.json
protocol/constants/: get-graphql-record.ts  vaultAbi.json
protocol/contracts/: TestErc20.sol  Vault.sol
protocol/scripts/: deposit.ts  getGraphRecord.ts  operator.ts
protocol/test/: bridge.test.ts
py/: pyproject.toml
py/py/: Vault.json  erc_20.py  monitor_events.py
scripts/: deposit.ts
test/: bridge.test.ts
the-graph/: .env  AUTH_HELPER.md  README.md
the-graph/eth_prague/: networks.json  package.json  (+2 more)
(+21 files in other folders)
